package com.design.structure.decorator;

/**
 * @Title: BeautifyDecorator
 * @Description: 美颜装饰器定义
 * @Author: yj
 * @Date: 2023/5/20 14:33
 * @Version: 1.0
 */
public interface BeautifyDecorator extends LiveStream{
	void enableBeautify();
}
