package com.design.structure.decorator;

/**
 * @Title: LiveStream
 * @Description: 直播定义
 * @Author: yj
 * @Date: 2023/5/20 14:30
 * @Version: 1.0
 */
public interface LiveStream {
	void liveStream();
}
